# fav-language-benchmarks

./: .gitignore  README.md  json_bench.js  post_json.lua
crystal/: app  app.cr  app.dwarf  shard.yml
go/: main.go
haskell/: Main.hs  json-bench.cabal
nim/: server  server.nim
rust/: Cargo.toml  README.md
rust/src/: main.rs
typescript/: deno.ts  server.ts
